feat: add email and phone to Form

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,14 +9,21 @@
 
     <!-- Validation -->
     <string name="validation_error_name_can_not_be_empty">El nombre no puede estar vacío.</string>
-    <string name="validation_error_length_password_too_short">La contraseña debe tener mínimo %1$d caracteres.</string>
-    <string name="validation_error_not_contains_letters_and_digits">La contraseña debe tener letras y números.</string>
+    <string name="validation_error_email_can_not_be_empty">El email no puede estar vacío.</string>
+    <string name="validation_error_email_invalid">El email ingresado no es válido.</string>
+    <string name="validation_error_phone_can_not_be_empty">El celular no puede estar vacío.</string>
+    <string name="validation_error_phone_length_too_short">El celular debe tener %1$d dígitos.</string>
+    <string name="validation_error_phone_not_start_by_nine">El celular debe iniciar con %1$s.</string>
+    <string name="validation_error_password_length_too_short">La contraseña debe tener mínimo %1$d caracteres.</string>
+    <string name="validation_error_password_not_contains_letters_and_digits">La contraseña debe tener letras y números.</string>
 
     <!-- Form -->
-    <string name="form_welcome_text">Hola %1$s!</string>
+    <string name="form_text_welcome">Hola %1$s!</string>
     <string name="form_text_field_name">Nombre</string>
     <string name="form_text_field_password">Contraseña</string>
     <string name="form_text_field_password_show_password">Ver contraseña</string>
     <string name="form_text_field_password_hide_password">Ocultar contraseña</string>
     <string name="form_button_send">Enviar</string>
+    <string name="form_text_field_email">Email</string>
+    <string name="form_text_field_phone">Celular</string>
 </resources>
